# enigma-game

./: .gitignore  CMakeLists.txt  README.md  cmake-cleanup.sh  main.cpp  run.sh
include/: Assets.h  Constants.h  Globals.h
src/: Audio.cpp  Dialog.cpp  EventHandler.cpp  Game.cpp  Helper.cpp  Override.cpp  Physics.cpp  Preload.cpp  Render.cpp  SceneInit.cpp  UI.cpp
src/scenes/: BrailleCipherScene.cpp  CipherScene.cpp  CreditsScene.cpp  DemoScene.cpp  EndScene.cpp  IntroScene.cpp  MenuScene.cpp  OptimusPrimeScene.cpp  OverworldScene.cpp  PlatformerScene.cpp  PuzzleCipherScene.cpp  RockScene.cpp  SceneInit.cpp  SnakeScene.cpp  TestScene.cpp  VigenereCipherScene.cpp
